clusters/talos-cluster/neo4j/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neo4j-route
  namespace: neo4j
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "neo4j.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: neo4j-service
          port: 7474
